--- a/app/src/main/res/layout/card_item_in_rv.xml
+++ b/app/src/main/res/layout/card_item_in_rv.xml
@@ -16,6 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
+
+
         <TextView
             android:id="@+id/nameTV"
             android:layout_width="wrap_content"
@@ -28,6 +31,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="59dp"
+            android:layout_height="80dp"
+            app:srcCompat="@drawable/m21_world" />
         <!--
                 <TextView
                     android:id="@+id/meaning_up_TV"
