--- a/app/src/main/res/layout/card_item_in_rv.xml
+++ b/app/src/main/res/layout/card_item_in_rv.xml
@@ -4,38 +4,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_cardView"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     android:padding="10dp"
-    app:contentPadding="10dp"
+    app:contentPadding="4dp"
     app:cardBackgroundColor="#EDC27F"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
 
-
-
         <TextView
-            android:id="@+id/nameTV"
+            android:id="@+id/numberInArcanaTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cards Name"
-            android:textAlignment="center"
-            android:textSize="18sp"
+            android:text="21"
+            android:textSize="10sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="59dp"
-            android:layout_height="80dp"
+            android:layout_width="87dp"
+            android:layout_height="137dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/m21_world" />
         <!--
                 <TextView
