--- a/app/src/main/res/layout/fragment_all_cards_rv.xml
+++ b/app/src/main/res/layout/fragment_all_cards_rv.xml
@@ -70,6 +70,34 @@
         app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/card_item_in_rv" />
 
+    <TextView
+        android:id="@+id/titleSWORDSTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:text="Swords (Minor Arcana)"
+        android:textColor="#D5041D"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cupsListRV" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/swordsListRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingHorizontal="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleSWORDSTV"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/card_item_in_rv" />
 
 
 
