--- a/app/src/main/res/layout/card_item_in_rv.xml
+++ b/app/src/main/res/layout/card_item_in_rv.xml
@@ -31,8 +31,9 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="47dp"
-            android:layout_height="70dp"
+            android:layout_width="97dp"
+            android:layout_height="154dp"
+            android:paddingBottom="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
